implemented the support for the 'distinct' prop of pwc-choices
* build for 0.3.2
* added an example of distinct prop to the index.html

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,16 @@
               bazola: true
             },
             {
+              index: 1,
+              foo: 41,
+              bar: 19.8397,
+              baz: "Kristine",
+              thud: "Matthews",
+              quax: "Randy Zimmerman",
+              grunt: "allison@anthony.uz",
+              bazola: true
+            },
+            {
               index: 2,
               foo: 18,
               bar: 19.4668,
@@ -235,7 +245,8 @@
             {
               dataField: "foo",
               type: "select-multiple",
-              label: "foo filter element"
+              label: "foo filter element",
+              distinct: "value"
             },
             {
               dataField: "thud",
