implemented labelProvider option for pwc-choices item config
* build for 0.3.5

--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,8 @@
               dataField: "foo",
               type: "select-multiple",
               label: "foo filter element",
-              placeholder: "Type to search..."
+              placeholder: "Type to search...",
+              labelProvider: value => "label of " + value
             },
             {
               dataField: "thud",
