--- a/src/index.html
+++ b/src/index.html
@@ -46,16 +46,16 @@
         });
 
         (async function() {
-          init();
-          await waitForSecondsAndInit(1);
-          init();
-          await waitForSecondsAndInit(1);
-          init();
-          await waitForSecondsAndInit(1);
-          init();
-          await waitForSecondsAndInit(1);
-          init();
-          // initForDeepSearch();
+          // init();
+          // await waitForSecondsAndInit(1);
+          // init();
+          // await waitForSecondsAndInit(1);
+          // init();
+          // await waitForSecondsAndInit(1);
+          // init();
+          // await waitForSecondsAndInit(1);
+          // init();
+          initForDeepSearch();
         })();
 
         function initForDeepSearch() {
@@ -121,8 +121,10 @@
           pwcFilter.items = [
             {
               dataField: "a.b.c",
-              type: "text",
-              label: "a.b.c filter element"
+              type: "select-multiple",
+              label: "a.b.c filter element",
+              distinct: "value",
+              placeholder: "plaaaacehooolder"
             }
           ];
         }
