--- a/src/index.html
+++ b/src/index.html
@@ -121,9 +121,8 @@
           pwcFilter.items = [
             {
               dataField: "a.b.c",
-              type: "select-multiple",
+              type: "select-multi",
               label: "a.b.c filter element",
-              distinct: "value",
               placeholder: "plaaaacehooolder"
             }
           ];
