prevent duplicates in null and undefined value options and put them at the bottom of the options list

--- a/src/index.html
+++ b/src/index.html
@@ -256,8 +256,7 @@
               type: "select-multi",
               label: "foo filter element",
               placeholder: "Type to search...",
-              labelProvider: value => "label of " + value,
-              distinctMode: "value"
+              labelProvider: value => "label of " + value
             },
             {
               dataField: "thud",
