bugfix & refactor: null and undefined value generation

--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
               foo: 38,
               bar: 11.7118,
               baz: "Rita",
-              thud: "Bailey",
+              thud: null,
               quax: "Christopher Baldwin",
               grunt: "sandra@king.edu",
               bazola: true
@@ -302,9 +302,9 @@
               }
             }
           ];
-        }
 
-        pwcFilter.handleNullAndUndefinedSeparately = false;
+          pwcFilter.handleNullAndUndefinedSeparately = false;
+        }
       });
 
       // Below are functions to help us test the lazy loading, they are not related to the usage
