--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 
     <script type="module" src="/build/pwc-filter.esm.js"></script>
     <script nomodule src="/build/pwc-filter.js"></script>
+
+    <style>
+      body {
+        width: 500px;
+      }
+    </style>
   </head>
   <body>
     <pwc-filter></pwc-filter>
