iconProvider and some performance refactorings in pwc-choices option generation

--- a/src/index.html
+++ b/src/index.html
@@ -319,7 +319,7 @@
             }
           ];
 
-          pwcFilter.handleNullAndUndefinedSeparately = false;
+          pwcFilter.handleNullAndUndefinedSeparately = true;
         }
       });
 
